Update title and add stylesheet

--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,8 @@
 
 <html>
     <head>
-        <title>Mauro Montane</title>
+        <title>mauromontane</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -21,12 +22,12 @@
             My goal is to explore and create innovative solutions and I'm ready to collaborate with anyone who shares my passion.
         </p>
 
-        <a name="projects">
-            <h2>Projects:</h2>
-            <ul>
-                <li>This website.</li>
-            </ul>
-        </a>
+        <a name="projects"></a>
+        <h2>Projects:</h2>
+        <ul>
+            <li>This website.</li>
+        </ul>
+        
         
         <h2>You can find me on:</h2>
         <ul>
