Update project list in index.html

--- a/site/index.html
+++ b/site/index.html
@@ -25,7 +25,8 @@
         <a name="projects"></a>
         <h2>Projects:</h2>
         <ul>
-            <li>This website.</li>
+            <li>My Portfolio.</li>
+            <li>ElevateU App.</li>
         </ul>
         
         
