add email link to index.html

--- a/site/index.html
+++ b/site/index.html
@@ -42,6 +42,7 @@
         <ul>
             <li><a href="https://www.github.com/mauromltn"><b>GitHub Profile</b></a></li>
             <li><a href="https://www.linkedin.com/in/mauro-montane"><b>Linkedin Page</b></a></li>
+            <li><a href="mailto:dev.montane@gmail.com"></a>Send an Email</li>
         </ul>
     </body>
 </html>
