Add target to footer-links

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
         </main>
         <footer>
             <div class="footer-links">
-                <a href="https://www.github.com/mauromltn"><img src="../icons/github.png" alt="GitHub"></a>
+                <a href="https://www.github.com/mauromltn" target="_blank"><img src="../icons/github.png" alt="GitHub"></a>
                 <a href="mailto:dev.montane@gmail.com"><img src="../icons/email.png" alt="Email"></a>
-                <a href="https://www.linkedin.com/in/mauro-montane"><img src="../icons/linkedin.png" alt="Linkedin"></a>
+                <a href="https://www.linkedin.com/in/mauro-montane" target="_blank"><img src="../icons/linkedin.png" alt="Linkedin"></a>
             </div>
             <h3>&copy 2024 - Mauro Montane</h3>
             
