--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,6 @@
 
     <body>
         <header>
-            <!-- <img src="../icons/icon.ico" alt="Profile Picture"> -->
             <nav>
                 <ul>
                     <li><a href="#">Home</a></li>
@@ -20,31 +19,29 @@
             </nav>    
         </header>
         <main>
-            <!-- <span>Mauro Montane</span>                
-            <span>Beginner Web Developer</span> -->
+            <div class="main-info">
+                <span>Mauro Montane</span>    
+                <span>Beginner Web Developer</span>
+                <p>Welcome to my portfolio here you can find information about me and my projects.</p>
+            </div>
+
+            <h1>About:</h1>
             <p>
-                Hey there, my name is Mauro. I'm a biginner web developer and this is my portfolio.
-                <br>
-                I'm currently working on a few projects, which you can find on my <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>. 
+                Hey there, my name is Mauro. I'm a biginner web developer and this is my portfolio. I'm currently working on a few projects, which you can find on my <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>. 
                 My goal is to explore and create innovative solutions and I'm ready to collaborate with anyone who shares my passion.
             </p>
 
             <h1>Projects:</h1>
-            <div class="projects-div" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank');">
-                <h3>Portfolio Website</h3>
-                <p>
-                    This is one of my first projects. I'm using HTML, CSS and JavaScript to create a simple portfolio website.
-                    <br>
-                    I'm updating it as I learn new things.
-                </p>
+            <div class="projects">
+                <div class="projects-div" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank');">
+                    <h3>Portfolio Website</h3>
+                    <p>
+                        This is one of my first projects. I'm using HTML, CSS and JavaScript to create a simple portfolio website.
+                        <br>
+                        I'm updating it as I learn new things.
+                    </p>
+                </div>
             </div>
-            
-            <h1>You can find me on:</h1>
-            <ul>
-                <li><a href="https://www.github.com/mauromltn">GitHub Profile</a></li>
-                <li><a href="https://www.linkedin.com/in/mauro-montane">Linkedin Page</a></li>
-                <li><a href="mailto:dev.montane@gmail.com"></a>Send an Email</li>
-            </ul>
             <footer>
                 <div class="footer-links">
                     <a href="https://www.github.com/mauromltn" target="_blank"><img src="../icons/github.png" alt="GitHub"></a>
