Update about and add skills

--- a/src/index.html
+++ b/src/index.html
@@ -22,17 +22,26 @@
         <div class="main-info">
             <span>Mauro Montane</span>    
             <span>Beginner Web Developer</span>
-            <p>Welcome to my portfolio here you can find information about me and my projects.</p>
+            <p>Welcome to my portfolio here you can find information<br>about me and my projects.</p>
         </div>
         
         <main>
             <h1>About:</h1>
             <p>
-                Hey there, my name is Mauro. I'm a biginner web developer and this is my portfolio. I'm currently working on a few projects, which you can find on my <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>. 
-                My goal is to explore and create innovative solutions and I'm ready to collaborate with anyone who shares my passion.
+                Hey there, my name is Mauro. I'm an 18 years old informatic student living in Italy.
+                Since I were a child I always saw programming and computers an interesting thing. Now I'm on a journey to become a web developer.
+                I like to create different kinds of projects because for me that's the best way to learn new things. I'm currently working on a few projects,
+                which you can find on my <a style="text-decoration: underline;" href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>.
             </p>
 
-            <h1>Projects:</h1>
+            <h1 class="skills-heading">Skills:</h1>
+            <div class="skills">
+                <p>HTML</p>
+                <p>CSS</p>
+                <p>Python</p>
+            </div>
+
+            <h1 class="projects-heading">Projects:</h1>
             <div class="projects">
                 <div class="projects-div" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank');">
                     <h3>Portfolio Website</h3>
