Update index style

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
         that's the best way to learn new things. I'm currently working on a few
         projects, which you can find on my
         <a
-          style="text-decoration: underline"
+          style="text-decoration: underline; color: #bbbbbb;"
           href="https://github.com/mauromltn?tab=repositories"
           >GitHub Page</a
         >.
