--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#footer">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -29,7 +29,7 @@
     </div>
 
     <main>
-      <h1>About:</h1>
+      <h1 id="about">About:</h1>
       <p>
         Hey there, my name is Mauro. I'm an 18 years old informatic student
         living in Italy. Since I were a child I always saw programming and
@@ -38,7 +38,7 @@
         that's the best way to learn new things. I'm currently working on a few
         projects, which you can find on my
         <a
-          style="text-decoration: underline; color: #bbbbbb;"
+          style="text-decoration: underline; color: #bbbbbb"
           href="https://github.com/mauromltn?tab=repositories"
           >GitHub Page</a
         >.
@@ -51,7 +51,7 @@
         <p>Python</p>
       </div>
 
-      <h1 class="projects-heading">Projects:</h1>
+      <h1 class="projects-heading" id="projects">Projects:</h1>
       <div class="projects">
         <div
           class="projects-div"
@@ -66,7 +66,7 @@
           </p>
         </div>
       </div>
-      <footer>
+      <footer id="footer">
         <div class="footer-links">
           <a href="https://www.github.com/mauromltn" target="_blank"
             ><img src="icons/github.png" alt="GitHub"
