Add vercel analytics

--- a/index.html
+++ b/index.html
@@ -81,5 +81,9 @@
         <h3>&copy 2024 - Mauro Montane</h3>
       </footer>
     </main>
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
