--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <link class="icon" rel="icon" href="icons/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mauro's Portfolio</title>
     <link rel="stylesheet" href="styles/style.css" />
-    <link class="icon" rel="icon" href="icons/icon.png" />
     <script>
       window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
