Update index and responsive settings

--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link class="icon" rel="icon" href="icons/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mauro's Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mauro Montane</title>
     <link rel="stylesheet" href="styles/style.css" />
     <script>
-      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
   </head>
 
-  <body>
+  <body id="home">
     <header>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#footer">Contact</a></li>
@@ -37,7 +41,7 @@
     <main>
       <h1 id="about">About:</h1>
       <p>
-        Hey there, my name is Mauro. I'm an 18 years old informatic student
+        Hey there, my name is Mauro. I'm an 18 years old student web developer
         living in Italy. Since I were a child I always saw programming and
         computers an interesting thing. Now I'm on a journey to become a web
         developer. I like to create different kinds of projects because for me
@@ -47,7 +51,7 @@
           style="text-decoration: underline; color: #bbbbbb"
           href="https://github.com/mauromltn?tab=repositories"
           >GitHub Page</a
-        >.
+        >. Hope you like my work!
       </p>
 
       <h1 class="skills-heading">Skills:</h1>
