Update footer icons color

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             ><img src="icons/github.png" alt="GitHub"
           /></a>
           <a href="mailto:dev.montane@gmail.com"
-            ><img src="icons/email.png" alt="Email"
+            ><img src="icons/mail.png" alt="Email"
           /></a>
           <a href="https://www.linkedin.com/in/mauro-montane" target="_blank"
             ><img src="icons/linkedin.png" alt="Linkedin"
