Reduce the footer icons size

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
       <footer id="footer">
         <div class="footer-links">
           <a href="https://www.github.com/mauromltn" target="_blank"
-            ><img src="icons/github.png" alt="GitHub"
+            ><img src="icons/github.webp" alt="GitHub"
           /></a>
           <a href="mailto:dev.montane@gmail.com"
-            ><img src="icons/mail.png" alt="Email"
+            ><img src="icons/mail.webp" alt="Mail"
           /></a>
           <a href="https://www.linkedin.com/in/mauro-montane" target="_blank"
-            ><img src="icons/linkedin.png" alt="Linkedin"
+            ><img src="icons/linkedin.webp" alt="Linkedin"
           /></a>
         </div>
         <h3>&copy 2024 - Mauro Montane</h3>
