Add meta description

--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link class="icon" rel="icon" href="icons/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to Mauro Montane's portfolio. Mauro is a front-end web developer based in Italy. Explore his projects and feel free to reach out for collaborations or inquiries."
+    />
+    <link class="icon" rel="icon" href="icons/icon.png" />
     <title>Mauro Montane</title>
     <link rel="stylesheet" href="styles/style.css" />
     <script>
