Add meta tag for google verification

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Welcome to Mauro Montane's portfolio. Mauro is a front-end web developer based in Italy. Explore his projects and feel free to reach out for collaborations or inquiries."
     />
+    <meta
+      name="google-site-verification"
+      content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A"
+    />
     <link class="icon" rel="icon" href="icons/icon.png" />
     <title>Mauro Montane</title>
     <link rel="stylesheet" href="styles/style.css" />
