Add meta tags for title and keywords

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Mauro Montane" />
     <meta
       name="description"
       content="Welcome to Mauro Montane's portfolio. Mauro is a front-end web developer based in Italy. Explore his projects and feel free to reach out for collaborations or inquiries."
+    />
+    <meta
+      name="keywords"
+      content="Mauro Montane, Mauro, Montane, Web Developer, Front-end Developer, Mauro Montane Portfolio"
     />
     <meta
       name="google-site-verification"
