--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       </p>
     </div>
 
-    <main>
-      <h1 id="about">About:</h1>
+    <main id="about">
+      <h1>About:</h1>
       <p>
         Hey there, my name is Mauro. I'm an 18 years old student web developer
         living in Italy. Since I were a child I always saw programming and
