update style and index added skill

--- a/index.html
+++ b/index.html
@@ -60,17 +60,15 @@
         developer. I like to create different kinds of projects because for me
         that's the best way to learn new things. I'm currently working on a few
         projects, which you can find on my
-        <a
-          style="text-decoration: underline; color: #bbbbbb"
-          href="https://github.com/mauromltn?tab=repositories"
-          >GitHub Page</a
-        >. Hope you like my work!
+        <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>.
+        Hope you like my work!
       </p>
 
       <h1 class="skills-heading">Skills:</h1>
       <div class="skills">
         <p>HTML</p>
         <p>CSS</p>
+        <p>JavaScript</p>
         <p>Python</p>
       </div>
 
