--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="title" content="Mauro Montane" />
     <meta
-      name="description"
-      content="Welcome to Mauro Montane's portfolio. Mauro is a front-end web developer based in Italy. Explore his projects and feel free to reach out for collaborations or inquiries."
-    />
-    <meta
       name="keywords"
-      content="Mauro Montane, Mauro, Montane, Web Developer, Front-end Developer, Mauro Montane Portfolio"
+      content="Mauro Montane, Montane Mauro, Mauro, Montane, Web Developer, Front-end Developer, Mauro Montane Portfolio"
     />
     <meta
       name="google-site-verification"
@@ -84,6 +80,16 @@
             to create a simple portfolio website.
             <br />
             I'm updating it as I learn new things.
+          </p>
+        </div>
+        <div
+          class="projects-div"
+          onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank');"
+        >
+          <h2>ToDo List</h2>
+          <p>
+            This is a simple ToDo List <b>in progress</b> made with HTML, CSS
+            and JavaScript. You can add, remove and mark tasks as done.
           </p>
         </div>
       </div>
