--- a/index.html
+++ b/index.html
@@ -2,20 +2,9 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Mauro Montane" />
-    <meta
-      name="keywords"
-      content="Mauro Montane, Montane Mauro, Mauro, Montane, Web Developer, Front-end Developer, Mauro Montane Portfolio"
-    />
-    <meta
-      name="google-site-verification"
-      content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A"
-    />
-    <link class="icon" rel="icon" href="icons/icon.png" />
-    <title>Mauro Montane</title>
-    <link rel="stylesheet" href="styles/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">
     <script>
       window.va =
         window.va ||
@@ -24,6 +13,10 @@
         };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
+
+    <link style="border-radius: 50%;" class="icon" rel="icon" href="icons/propic.ico">
+    <title>Mauro Montane</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body id="home">
@@ -39,14 +32,18 @@
     </header>
 
     <div class="main-info">
+      <div class="text-div">
       <span>Mauro Montane</span>
-      <span>Beginner Web Developer</span>
+      <span>Front-End Developer</span>
       <p>
-        Welcome to my portfolio here you can find information<br />about me and
+        Welcome to my portfolio here you can find information<br>about me and
         my projects.
       </p>
+      </div>
+      <div class="picture-div">
+        <img class="propic" src="icons/propic.png" alt="Profile Picture">
+      </div>
     </div>
-
     <main id="about">
       <h1>About:</h1>
       <p>
@@ -70,22 +67,16 @@
 
       <h1 class="projects-heading" id="projects">Projects:</h1>
       <div class="projects">
-        <div
-          class="projects-div"
-          onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank');"
-        >
+        <div class="projects-div" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
           <h2>Portfolio Website</h2>
           <p>
             This is one of my first projects. I'm using HTML, CSS and JavaScript
             to create a simple portfolio website.
-            <br />
+            <br>
             I'm updating it as I learn new things.
           </p>
         </div>
-        <div
-          class="projects-div"
-          onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank');"
-        >
+        <div class="projects-div"onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
           <h2>ToDo List</h2>
           <p>
             This is a simple ToDo List <b>in progress</b> made with HTML, CSS
@@ -95,15 +86,9 @@
       </div>
       <footer id="footer">
         <div class="footer-links">
-          <a href="https://www.github.com/mauromltn" target="_blank"
-            ><img src="icons/github.webp" alt="GitHub"
-          /></a>
-          <a href="mailto:dev.montane@gmail.com"
-            ><img src="icons/mail.webp" alt="Mail"
-          /></a>
-          <a href="https://www.linkedin.com/in/mauro-montane" target="_blank"
-            ><img src="icons/linkedin.webp" alt="Linkedin"
-          /></a>
+          <a href="https://www.github.com/mauromltn" target="_blank"><img src="icons/github.webp" alt="GitHub"></a>
+          <a href="mailto:dev.montane@gmail.com"><img src="icons/mail.webp" alt="Mail"></a>
+          <a href="https://www.linkedin.com/in/mauro-montane" target="_blank"><img src="icons/linkedin.webp" alt="Linkedin"></a>
         </div>
         <h3>&copy 2024 - Mauro Montane</h3>
       </footer>
