Adjust the layout for responsiveness

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
 
-    <link style="border-radius: 50%;" class="icon" rel="icon" href="icons/propic.ico">
+    <link class="icon" rel="icon" href="icons/icon.ico">
     <title>Mauro Montane</title>
     <link rel="stylesheet" href="styles/style.css">
   </head>
@@ -41,7 +41,7 @@
       </p>
       </div>
       <div class="picture-div">
-        <img class="propic" src="icons/propic.png" alt="Profile Picture">
+        <img class="propic" src="icons/profile.png" alt="Profile Picture">
       </div>
     </div>
     <main id="about">
