Add new poject and removed unused code

--- a/index.html
+++ b/index.html
@@ -76,11 +76,19 @@
             I'm updating it as I learn new things.
           </p>
         </div>
-        <div class="projects-div"onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
+        <div class="projects-div" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
           <h2>ToDo List</h2>
           <p>
             This is a simple ToDo List <b>in progress</b> made with HTML, CSS
             and JavaScript. You can add, remove and mark tasks as done.
+          </p>
+        </div>
+        <div class="projects-div" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
+          <h2>Sign-Up Page</h2>
+          <p>
+            This is a Sign-Up Page, I'm using HTML and CSS to create it.
+            It's <b>focused on the design</b> and the layout of the page, not on the
+            functionality. 
           </p>
         </div>
       </div>
