Update stylesheet link, about section, skills list and project description

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link class="icon" rel="icon" href="icons/icon.ico">
     <title>Mauro Montane</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
   </head>
 
   <body id="home">
@@ -47,40 +47,36 @@
     <main id="about">
       <h1>About:</h1>
       <p>
-        Hey there, my name is Mauro. I'm an 18 years old student web developer
-        living in Italy. Since I were a child I always saw programming and
-        computers an interesting thing. Now I'm on a journey to become a web
-        developer. I like to create different kinds of projects because for me
-        that's the best way to learn new things. I'm currently working on a few
-        projects, which you can find on my
+        Hey there, my name is Mauro. I'm an 18-year-old student web developer living in Italy. 
+        Since I was a child, I've always found programming and computers fascinating. Now, I'm 
+        on a journey to become a Front-End web developer. I enjoy creating different kinds of 
+        projects because, for me, that's the best way to learn new things. I'm currently studying 
+        Computer Science in high school and pursuing a Front-End Engineer career path on Codecademy. 
+        I'm learning a bit of UI/UX design to enhance my ability to create well-designed websites, 
+        even though it's not my main focus. Programming is not just work for me, but also a passion. 
+        I often spend my free time working on personal projects to enhance my skills and explore 
+        new technologies. You can find my ongoing and completed projects on my 
         <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>.
         Hope you like my work!
       </p>
 
       <h1 class="skills-heading">Skills:</h1>
       <div class="skills">
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>Python</p>
+        <span>HTML</span>
+        <span>CSS</span>
+        <span>JavaScript</span>
+        <span>Git</span>
+        <span>GitHub</span>
+        <span>Figma</span>
       </div>
-
+      
       <h1 class="projects-heading" id="projects">Projects:</h1>
       <div class="projects">
         <div class="projects-div" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
           <h2>Portfolio Website</h2>
           <p>
             This is one of my first projects. I'm using HTML, CSS and JavaScript
-            to create a simple portfolio website.
-            <br>
-            I'm updating it as I learn new things.
-          </p>
-        </div>
-        <div class="projects-div" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
-          <h2>ToDo List</h2>
-          <p>
-            This is a simple ToDo List <b>in progress</b> made with HTML, CSS
-            and JavaScript. You can add, remove and mark tasks as done.
+            to create a simple portfolio website. I'm updating it as I learn new things.
           </p>
         </div>
         <div class="projects-div" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
@@ -89,6 +85,13 @@
             This is a Sign-Up Page, I'm using HTML and CSS to create it.
             It's <b>focused on the design</b> and the layout of the page, not on the
             functionality. 
+          </p>
+        </div>
+        <div class="projects-div" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
+          <h2>ToDo List</h2>
+          <p>
+            This is a simple ToDo List web app <b>in progress</b> made with HTML, CSS
+            and JavaScript. You can add, remove and mark tasks as done.
           </p>
         </div>
       </div>
