Fix responsive layout of skill section

--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 
       <h1 class="skills-heading">Skills:</h1>
       <div class="skills">
-        <span>HTML</span>
-        <span>CSS</span>
-        <span>JavaScript</span>
-        <span>Git</span>
-        <span>GitHub</span>
-        <span>Figma</span>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>Git</p>
+        <p>GitHub</p>
+        <p>Figma</p>
       </div>
       
       <h1 class="projects-heading" id="projects">Projects:</h1>
