Update styles and layout for responsiveness

--- a/index.html
+++ b/index.html
@@ -4,19 +4,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mauro Montane</title>
+    <link class="icon" rel="icon" href="icons/icon.ico">
+    <link rel="stylesheet" href="src/styles/style.css">
     <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">
     <script>
-      window.va =
-        window.va ||
-        function () {
+      window.va = window.va || function () {
           (window.vaq = window.vaq || []).push(arguments);
         };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
-
-    <link class="icon" rel="icon" href="icons/icon.ico">
-    <title>Mauro Montane</title>
-    <link rel="stylesheet" href="src/styles/style.css">
   </head>
 
   <body id="home">
@@ -72,14 +69,14 @@
       
       <h1 class="projects-heading" id="projects">Projects:</h1>
       <div class="projects">
-        <div class="projects-div" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
+        <div class="project" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
           <h2>Portfolio Website</h2>
           <p>
             This is one of my first projects. I'm using HTML, CSS and JavaScript
             to create a simple portfolio website. I'm updating it as I learn new things.
           </p>
         </div>
-        <div class="projects-div" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
+        <div class="project" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
           <h2>Sign-Up Page</h2>
           <p>
             This is a Sign-Up Page, I'm using HTML and CSS to create it.
@@ -87,7 +84,7 @@
             functionality. 
           </p>
         </div>
-        <div class="projects-div" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
+        <div class="project" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
           <h2>ToDo List</h2>
           <p>
             This is a simple ToDo List web app <b>in progress</b> made with HTML, CSS
