Fix about text for responsiveness

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <main id="about">
       <h1>About:</h1>
-      <p>
+      <p class="about">
         Hey there, my name is Mauro. I'm an 19 year old student web developer living in Italy. 
         Since I was a child, I've always found programming and computers fascinating. Now, I'm 
         on a journey to become a Front-End web developer. I enjoy creating different kinds of 
