--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="project" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
-          <h2>ToDo List</h2>
+          <h2>To-Do List</h2>
           <p>
             This is a simple ToDo List web app <b>in progress</b> made with HTML, CSS
             and JavaScript. You can add, remove and mark tasks as done.
