--- a/index.html
+++ b/index.html
@@ -56,6 +56,47 @@
         <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>.
         Hope you like my work!
       </p>
+      
+      <h1 class="projects-heading" id="projects">Projects:</h1>
+      <div class="projects">
+        <div class="project" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
+            <path fill-rule="evenodd" 
+            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
+            clip-rule="evenodd"></path>
+          </svg>    
+          <span>Portfolio Website</span>
+          <p>
+            This is one of my first projects. I'm using HTML, CSS and JavaScript
+            to create a simple portfolio website. I'm updating it as I learn new things.
+          </p>
+        </div>
+        <div class="project" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
+            <path fill-rule="evenodd" 
+            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
+            clip-rule="evenodd"></path>
+          </svg>    
+          <span>Sign-Up Page</span>
+          <p>
+            This is a Sign-Up Page, I'm using HTML and CSS to create it.
+            It's <b>focused on the design</b> and the layout of the page, not on the
+            functionality. 
+          </p>
+        </div>
+        <div class="project" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
+            <path fill-rule="evenodd" 
+            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
+            clip-rule="evenodd"></path>
+          </svg>    
+          <span>To-Do List</span>
+          <p>
+            This is a simple ToDo List web app <b>in progress</b> made with HTML, CSS
+            and JavaScript. You can add, remove and mark tasks as done.
+          </p>
+        </div>
+      </div>
 
       <h1 class="skills-heading">Skills:</h1>
       <div class="skills">
@@ -66,32 +107,7 @@
         <p>GitHub</p>
         <p>Figma</p>
       </div>
-      
-      <h1 class="projects-heading" id="projects">Projects:</h1>
-      <div class="projects">
-        <div class="project" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
-          <h2>Portfolio Website</h2>
-          <p>
-            This is one of my first projects. I'm using HTML, CSS and JavaScript
-            to create a simple portfolio website. I'm updating it as I learn new things.
-          </p>
-        </div>
-        <div class="project" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
-          <h2>Sign-Up Page</h2>
-          <p>
-            This is a Sign-Up Page, I'm using HTML and CSS to create it.
-            It's <b>focused on the design</b> and the layout of the page, not on the
-            functionality. 
-          </p>
-        </div>
-        <div class="project" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
-          <h2>To-Do List</h2>
-          <p>
-            This is a simple ToDo List web app <b>in progress</b> made with HTML, CSS
-            and JavaScript. You can add, remove and mark tasks as done.
-          </p>
-        </div>
-      </div>
+
       <footer id="footer">
         <div class="footer-links">
           <a href="https://www.github.com/mauromltn" target="_blank"><img src="icons/github.webp" alt="GitHub"></a>
