Fix the responsiveness of the project's signifier

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
             clip-rule="evenodd"></path>
           </svg>    
-          <span>Portfolio Website</span>
+          <h2>Portfolio Website</h2>
           <p>
             This is one of my first projects. I'm using HTML, CSS and JavaScript
             to create a simple portfolio website. I'm updating it as I learn new things.
@@ -77,7 +77,7 @@
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
             clip-rule="evenodd"></path>
           </svg>    
-          <span>Sign-Up Page</span>
+          <h2>Sign-Up Page</h2>
           <p>
             This is a Sign-Up Page, I'm using HTML and CSS to create it.
             It's <b>focused on the design</b> and the layout of the page, not on the
@@ -90,7 +90,7 @@
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
             clip-rule="evenodd"></path>
           </svg>    
-          <span>To-Do List</span>
+          <h2>To-Do List</h2>
           <p>
             This is a simple ToDo List web app <b>in progress</b> made with HTML, CSS
             and JavaScript. You can add, remove and mark tasks as done.
