Improve color contrast and add meta description

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Mauro Montane</title>
     <link class="icon" rel="icon" href="icons/icon.ico">
     <link rel="stylesheet" href="src/styles/style.css">
+    <meta name="description" content="Mauro Montane's Portfolio Website">
     <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">
     <script>
       window.va = window.va || function () {
