--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main id="about">
       <h1>About:</h1>
       <p class="about">
-        Hey there, my name is Mauro. I'm an 19 year old student web developer living in Italy. 
+        Hey there, my name is Mauro. I'm a 19 years old student web developer living in Italy. 
         Since I was a child, I've always found programming and computers fascinating. Now, I'm 
         on a journey to become a Front-End web developer. I enjoy creating different kinds of 
         projects because, for me, that's the best way to learn new things. I'm currently studying 
