feat: Create cursor animation
- Add a white dot shape cursor animation

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
         <h3>&copy 2024 - Mauro Montane</h3>
       </footer>
     </main>
+    <div class="cursor"></div>
     <script src="src/js/script.js"></script>
   </body>
 </html>
