feat: Update cursor size on hover

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <div class="main-info">
       <div class="text-div">
-      <span class="big-cursor">Mauro Montane</span>
-      <span class="big-cursor">Front-End Developer</span>
+      <span>Mauro Montane</span>
+      <span>Front-End Developer</span>
       <p>
         Welcome to my portfolio here you can find information<br>about me and
         my projects.
@@ -60,7 +60,7 @@
       
       <h1 class="projects-heading" id="projects">Projects:</h1>
       <div class="projects">
-        <div class="project big-cusor" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
+        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
@@ -72,7 +72,7 @@
             to create a simple portfolio website. I'm updating it as I learn new things.
           </p>
         </div>
-        <div class="project big-cusor" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
+        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
@@ -85,7 +85,7 @@
             functionality. 
           </p>
         </div>
-        <div class="project big-cusor" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
+        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
@@ -100,7 +100,7 @@
       </div>
 
       <h1 class="skills-heading">Skills:</h1>
-      <div class="skills big-cusor">
+      <div class="skills">
         <p>HTML</p>
         <p>CSS</p>
         <p>JavaScript</p>
