--- a/index.html
+++ b/index.html
@@ -85,6 +85,18 @@
             functionality. 
           </p>
         </div>
+        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/agenv', '_blank')">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
+            <path fill-rule="evenodd" 
+            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
+            clip-rule="evenodd"></path>
+          </svg>    
+          <h2>Travel Agency</h2>
+          <p>
+            This is a simple Travel Agency web app made with HTML, CSS and JavaScript.
+            You can book a trip and see the details of the trip.
+          </p>
+        </div>
         <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
