--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Mauro Montane</title>
     <link class="icon" rel="icon" href="icons/icon.ico">
     <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <meta name="description" content="Mauro Montane's Portfolio Website">
+    <meta name="keywords" content="Mauro Montane, Portfolio, Web Developer, Front-End Developer">
     <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">
     <script>
       window.va = window.va || function () {
