style: Add form validation

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <br>
           <textarea name="message" id="message" placeholder="Message" required></textarea>
           <br>
-          <button id="submit">Submit</button>
+          <button type="submit" id="submit">Submit</button>
         </form>
       </section>
 
