feat: Update the description and fix the SignUp project link

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         Since I was a child, I've always found programming and computers fascinating. Now, I'm 
         on a journey to become a Front-End web developer. I enjoy creating different kinds of 
         projects because, for me, that's the best way to learn new things. I'm currently studying 
-        Computer Science in high school and pursuing a Front-End Engineer career path on Codecademy. 
+        Computer Science in high school and pursuing a Front-End Engineer and iOS Developer career path on Codecademy. 
         I'm learning a bit of UI/UX design to enhance my ability to create well-designed websites, 
         even though it's not my main focus. Programming is not just work for me, but also a passion. 
         I often spend my free time working on personal projects to enhance my skills and explore 
@@ -83,7 +83,7 @@
             to create a simple portfolio website. I'm updating it as I learn new things.
           </p>
         </div>
-        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn?tab=repositories', '_blank')">
+        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/SignUp-Page', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
             d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
