--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="#footer">Connect</a></li>
         </ul>
       </nav>
+      <button class="theme-toggle">Light</button>
     </header>
 
     <div class="main-info">
