--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         even though it's not my main focus. Programming is not just work for me, but also a passion. 
         I often spend my free time working on personal projects to enhance my skills and explore 
         new technologies. You can find my ongoing and completed projects on my 
-        <a href="https://github.com/mauromltn?tab=repositories">GitHub Page</a>.
+        <a href="https://github.com/mauromltn">GitHub Page</a>.
         Hope you like my work!
       </p>
       
