feat: Add a new project - Add the progressive blur to the projects section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
             to create a simple portfolio website. I'm updating it as I learn new things.
           </p>
         </div>
+        
+        <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/progressive-blur', '_blank')">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
+            <path fill-rule="evenodd" 
+            d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
+            clip-rule="evenodd"></path>
+          </svg>    
+          <h2>Progressive Blur</h2>
+          <p>
+            This is a simple card design with a progressive blur effect at the bottom
+            under the text. I'm using HTML and CSS to create it.
+          </p>
+        </div>
+
         <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/SignUp-Page', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
@@ -97,6 +111,7 @@
             functionality. 
           </p>
         </div>
+
         <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/agenv', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
@@ -109,6 +124,7 @@
             You can book a trip and see the details of the trip.
           </p>
         </div>
+
         <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
             <path fill-rule="evenodd" 
