--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <meta name="description" content="Mauro Montane's Portfolio Website">
     <meta name="keywords" content="Mauro Montane, Portfolio, Web Developer, Front-End Developer">
-    <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">
+    <meta name="google-site-verification" content="bdWojq0E0UUesmSu2t5zJK8-IEEJUH7Fia6iusi9Y4I" />
     <script>
       window.va = window.va || function () {
           (window.vaq = window.vaq || []).push(arguments);
