fix: Update Google site verification and add Open Graph meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <meta name="description" content="Mauro Montane's Portfolio Website">
     <meta name="keywords" content="Mauro Montane, Portfolio, Web Developer, Front-End Developer">
+    <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">  <!-- old one -->
     <meta name="google-site-verification" content="bdWojq0E0UUesmSu2t5zJK8-IEEJUH7Fia6iusi9Y4I" />
+    <meta property="og:title" content="Mauro Montane - Portfolio">
+    <meta property="og:image" content="https://mauromontane.me/icons/">
+    <meta property="og:url" content="https://mauromontane.me">
+    <meta property="og:type" content="website">
     <script>
       window.va = window.va || function () {
           (window.vaq = window.vaq || []).push(arguments);
