--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">  <!-- old one -->
     <meta name="google-site-verification" content="bdWojq0E0UUesmSu2t5zJK8-IEEJUH7Fia6iusi9Y4I" />
     <meta property="og:title" content="Mauro Montane - Portfolio">
-    <meta property="og:image" content="https://mauromontane.me/icons/">
+    <meta property="og:image" content="https://mauromontane.me/icons/og-image.png">
     <meta property="og:url" content="https://mauromontane.me">
     <meta property="og:type" content="website">
     <script>
