feat: Add new skill

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 
       <h1 class="skills-heading">Skills:</h1>
       <div class="skills">
+        <p>Swift</p>
         <p>HTML</p>
         <p>CSS</p>
         <p>JavaScript</p>
