style: Refactor footer layout and update theme toggle button

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#footer">Connect</a></li>
         </ul>
+        <button class="theme-toggle">Light</button>
       </nav>
-      <button class="theme-toggle">Light</button>
     </header>
 
     <div class="main-info">
@@ -159,9 +159,9 @@
         <p>
           Have a question or comment? Feel free to reach out through the form below.
         </p>
-        <form action="https://formspree.io/f/xgvwwwww" method="post">
-          <input type="text" id="firstname" name="firstname" placeholder="First Name" autocomplete="off" minlength="0" required>
-          <input type="text" name="lastname" id="lastname" placeholder="Last Name" autocomplete="off" required>
+        <form action="https://formspree.io/f/xgvwwwww" method="post" autocomplete="off">
+          <input type="text" id="firstname" name="firstname" placeholder="First Name" minlength="0" required>
+          <input type="text" name="lastname" id="lastname" placeholder="Last Name" required>
           <br>
           <input type="email" id="email" name="email" placeholder="user@example.com" required>
           <br>
@@ -177,7 +177,7 @@
           <a href="mailto:dev.montane@gmail.com"><img src="icons/mail.webp" alt="Mail"></a>
           <a href="https://www.linkedin.com/in/mauro-montane" target="_blank"><img src="icons/linkedin.webp" alt="Linkedin"></a>
         </div>
-        <h3>&copy 2024 - Mauro Montane</h3>
+        <h3>&copy; 2024-2025 Mauro Montane</h3>
       </footer>
     </main>
     <div class="cursor"></div>
