style: Simplify heading elements and adjust margins for better layout consistency

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         Hope you like my work!
       </p>
       
-      <h1 class="projects-heading" id="projects">Projects:</h1>
+      <h1 id="projects">Projects:</h1>
       <div class="projects">
         <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
@@ -144,7 +144,7 @@
         </div>
       </div>
 
-      <h1 class="skills-heading">Skills:</h1>
+      <h1>Skills:</h1>
       <div class="skills">
         <p>Swift</p>
         <p>HTML</p>
@@ -153,7 +153,7 @@
         <p>Figma</p>
       </div>
 
-      <h1 class="connect-heading">Connect:</h1>
+      <h1>Connect:</h1>
       <section>
         <h2>Reach Out</h2>
         <p>
