style: Add a main background image and update file paths

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mauro Montane</title>
     <link class="icon" rel="icon" href="icons/icon.ico">
-    <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Syne:wght@400..800&display=swap" rel="stylesheet">
@@ -181,6 +181,6 @@
       </footer>
     </main>
     <div class="cursor"></div>
-    <script src="src/js/script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
