--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
       </footer>
     </main>
     <div class="cursor"></div>
-    <script src="js/script.js"></script>
+
+    <script src="https://unpkg.com/lenis@1.1.20/dist/lenis.min.js"></script>
+    <script type="module" src="js/script.js"></script>
   </body>
 </html>
