feat: Improve footer responsiveness and fix connect link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <p>Figma</p>
         </div>
 
-        <h1>Connect:</h1>
+        <h1 id="footer">Connect:</h1>
         <section>
           <h2>Reach Out</h2>
           <p>
@@ -169,7 +169,7 @@
         </section>
       </main>
     </div>
-    <footer id="footer">
+    <footer>
       <div class="footer-content">
         <div class="footer-text">
           <p>Front-End Developer</p>
