feat: Add react to skills

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
           <p>HTML</p>
           <p>CSS</p>
           <p>JavaScript</p>
+          <p>React</p>
           <p>Figma</p>
         </div>
 
